<resources>
    <string name="app_name">Personal Trainer</string>
    <string name="login_success">Login successful!</string>
    <string name="login_failure">Failure to login successfully</string>
    <string name="user_name">jdoe</string>
    <string name="user_password">welcome1</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_customer">Enter New Customer</string>
    <string name="customer_sessions">Customer Sessions</string>
    <string name="customer_list">Customer List</string>
    <string name="camera">Camera</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_session">Edit Session</string>
    <string name="complete_pay">Complete and Pay</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="cash">Customer Paid Cash</string>
    <string name="credit_debit">Credit/Debit Card</string>
    <string name="card_type">Card Type</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="name_on_card">Name on Card</string>
    <string name="ccv">CCV</string>
    <string name="card_number">Card Number</string>
    <string name="receipt">Receipt?</string>
    <string name="pay_future">Payment for Future Session</string>
    <string name="logged_in">Logged in: JDOE</string>
    <string name="logoff_menu_title">Logoff</string>
    <string name="logging_off_toast">Logging You Off...</string>
    <string name="sample_phone_number">7271234567</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
