<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.personaltrainer.PaymentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_pay"
        android:id="@+id/payment_textview"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:id="@+id/cash_checkbox"
        android:layout_below="@+id/payment_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_debit"
        android:id="@+id/credit_debit_checkbox"
        android:layout_alignBottom="@+id/cash_checkbox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_edittext"
        android:layout_below="@+id/cash_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:text="@string/card_type"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/expiration_edittext"
        android:layout_below="@+id/card_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/expiration_date"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_on_card"
        android:ems="10"
        android:id="@+id/name_on_card_edittext"
        android:layout_below="@+id/expiration_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ccv_edittext"
        android:layout_below="@+id/name_on_card_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ccv"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_number_edittext"
        android:layout_below="@+id/ccv_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/card_number"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:id="@+id/receipt_checkbox"
        android:layout_below="@+id/card_number_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_pay"
        android:id="@+id/complete_and_pay_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pay_future_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_future"
        android:id="@+id/pay_future_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/complete_and_pay_button"
        android:layout_toStartOf="@+id/complete_and_pay_button"/>

</RelativeLayout>
